include/dss_capi.h

    /*
    Names of all Vsource objects in the circuit
    */
    DSS_CAPI_DLL void Vsources_Get_AllNames(char*** ResultPtr, int32_t* ResultCount);
    /*
    Same as Vsources_Get_AllNames but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Vsources_Get_AllNames_GR(void);
    /*
    Number of Vsource Object
    */
    DSS_CAPI_DLL int32_t Vsources_Get_Count(void);
    /*
    Sets the first VSOURCE to be active; Returns 0 if none
    */
    DSS_CAPI_DLL int32_t Vsources_Get_First(void);
    /*
    Sets the next VSOURCE object to be active; returns zero if no more
    */
    DSS_CAPI_DLL int32_t Vsources_Get_Next(void);
    /*
    Get Active VSOURCE name
    */
    DSS_CAPI_DLL char* Vsources_Get_Name(void);
    /*
    Set Active VSOURCE by Name
    */
    DSS_CAPI_DLL void Vsources_Set_Name(char* Value);
    /*
    Source Voltage in kV
    */
    DSS_CAPI_DLL double Vsources_Get_BasekV(void);
    /*
    Source pu voltage.
    */
    DSS_CAPI_DLL double Vsources_Get_pu(void);
    /*
    Source voltage in kV
    */
    DSS_CAPI_DLL void Vsources_Set_BasekV(double Value);
    /*
    Per-unit value of source voltage based on kV
    */
    DSS_CAPI_DLL void Vsources_Set_pu(double Value);
    /*
    Phase angle of first phase in degrees
    */
    DSS_CAPI_DLL double Vsources_Get_AngleDeg(void);
    /*
    Source Frequency in Hz
    */
    DSS_CAPI_DLL double Vsources_Get_Frequency(void);
    /*
    Number of Phases
    */
    DSS_CAPI_DLL int32_t Vsources_Get_Phases(void);
    /*
    phase angle in degrees
    */
    DSS_CAPI_DLL void Vsources_Set_AngleDeg(double Value);
    /*
    Source frequency in Hz
    */
    DSS_CAPI_DLL void Vsources_Set_Frequency(double Value);
    /*
    Number of phases
    */
    DSS_CAPI_DLL void Vsources_Set_Phases(int32_t Value);
    DSS_CAPI_DLL int32_t Vsources_Get_idx(void);
    DSS_CAPI_DLL void Vsources_Set_idx(int32_t Value);